<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BIlanja Sign App</string>
    <string name="nama_gambar">Nama Gambar</string>
    <string name="asal_gambar">Asal Gambar</string>
    <string name="isi_gambar">Isi Gambar</string>
    <string name="nama_video">Nama Video</string>
    <string name="asal_video">Asal Video</string>
    <string name="isi_video">Isi Video</string>
    <string name="nama_apk">BIlanja Sign Application</string>
    <string name="asal_apk"><i>Produk Lokal Generasi Muda Millenial 4.0 - Indonesia</i></string>
    <string name="penjelasan_apk">Aplikasi yang dirancang untuk memudahkan kaum disabilitas dalam berbelanja. Aplikasi ini berisi tentang bentuk-bentuk bahasa isyarat yang membantu kaum disabilitas berkomunikasi saat berbelanja, yang di dalamnya terdapat beberapa kosakata dalam kamus bergambar maupun explore video yang disediakan secara lengkap dan umum untuk kaum disabilitas dalam berbelanja di dalam supermarket ataupun gedung pertokoan. Dirancang sedemikian rupa agar mudah diakses oleh kaum disabilitas dari semua kalangan, baik yang paham teknologi atau yang masih awam teknologi.\n</string>
    <string name="credit_apk">\n\n\n\n\nBuatan Mahasiswa/i dari Fakultas Ilmu Komputer - Teknik Informatika 2017 - Universitas Mercu Buana Jakarta</string>
    <string name="email_apk">Temukan kami di : BIlanjaSign.id</string>
    <string name="penggunaan_apk_help">Aplikasi yang dirancang untuk memudahkan kaum disabilitas dalam berbelanja. Aplikasi ini berisi tentang bentuk-bentuk bahasa isyarat yang membantu kaum disabilitas berkomunikasi saat berbelanja, yang di dalamnya terdapat beberapa kosakata dalam kamus bergambar maupun explore video yang disediakan secara lengkap dan umum untuk kaum disabilitas dalam berbelanja di dalam supermarket ataupun gedung pertokoan. Dirancang sedemikian rupa agar mudah diakses oleh kaum disabilitas dari semua kalangan, baik yang paham teknologi atau yang masih awam teknologi.\n
        \n\n\n<b><u><font color='#c0392b'>Cara Penggunaan :</font></u></b>
        \n\n<b><font color='#fc4a1a'>1. Buka aplikasi BIlanja Sign App</font></b>
        \n\n<b><font color='#fc4a1a'>2. Saat aplikasi berjalan, pada awal tampilan aplikasi tersebut muncul Splash Screen. Splash Screen ini biasanya muncul paling awal ketika kita membuka aplikasi. Splash Screen biasanya berisi nama, logo, dan tagline dari aplikasi BIlanja Sign App tersebut. Splash Screen ini berlangsung selama beberapa detik. Tunggu beberapa detik untuk langsung dialihkan ke halaman selanjutnya.</font></b>
        \n\n<b><font color='#fc4a1a'>3. Setelah proses loading Splash Screen selesai, tampilan halaman akan langsung dialihkan ke tampilan utama atau dashboard dari aplikasi BIlanja Sign tersebut. Didalam halaman utama atau dashboard tersebut terdapat beberapa menu yang dapat digunakan untuk membantu pengguna para kaum disabilitas dalam berbelanja. Mulai dari menu yang membantu kaum disabilitas dalam berkomunikasi (gambar maupun video), hingga menu yang menjelaskan mengenai aplikasi ini seperti tentang aplikasi tersebut dan bagaimana cara penggunaan aplikasi ini. Didalam aplikasi ini, terdapat beberapa komponen menu seperti List View dan Search View yang memudahkan bagi para pengguna dalam menggunakan aplikasi ini.</font> \n\n
            <font color='#799F0C'> Menu-menu tersebut adalah sebagai berikut : </font></b>
        \n\n<b><font color='#0082c8'>|-> Kamus Gambar :</font></b> digunakan sebagai kamus bergambar yang berisi kumpulan gambar bahasa isyarat mengenai bagaimana cara berkomunikasi saat berbelanja, kosakata bahasa isyarat berbelanja. Dalam menu ini, kosakata disusun secara list atau seperti daftar yang sangat dengan mudah digunakan oleh para penggunanya degan beberapa sedikit penjelasan dibagian depan dari daftar tersebut. Selain itu, di dalam menu ini juga terdapat opsi kotak pencahariann atau search view yang sangat membantu pengguna dalam mencari kosakata yang diinginkan, jadi pengguna tidak perlu mencari satu persatu kosakata dengan scroll secara manual, bisa langsung menggunakan fitur pencaharian untuk mencari kosakata tersebut secara mudah dan cepat.\n<b><font color='#be5869'><i>Tahapan Alur Penggunaan =</i> klik aplikasi BIlanjaSign App -> klik kotak telusuri di bagian kamus bergambar -> pilih bagian kosakata yang ingin digunakan -> klik daftar kosakata tersebut -> masuk ke halaman penjelasan, di dalam penjelasan ada gambar beserta nama dan arti makna dari kosakata tersebut.</font></b>
        \n\n\n<b><font color='#0082c8'>|-> Explore Video :</font></b> digunakan sebagai explore video yang berisi kumpulan video bahasa isyarat mengenai bagaimana cara implementasi bahasa isyarat dalam melakukan perbelanjaan di supermarket maupun gedung pertokoan. Dalam menu ini, video disusun secara list atau seperti daftar yang sangat dengan mudah digunakan oleh para penggunanya degan beberapa sedikit penjelasan dibagian depan dari daftar tersebut. Selain itu, di dalam menu ini juga terdapat opsi kotak pencahariann atau search view yang sangat membantu pengguna dalam mencari video yang diinginkan, jadi pengguna tidak perlu mencari satu persatu video dengan scroll secara manual, bisa langsung bisa menggunakan fitur pencaharian untuk mencari video tersebut secara mudah dan cepat.\n<b><font color='#be5869'><i>Tahapan Alur Penggunaan = </i>klik aplikasi BIlanjaSign App -> klik kotak telusuri di bagian explore video -> pilih bagian video yang ingin ditonton -> klik daftar video tersebut -> masuk ke halaman video penjelasan, di dalam penjelasan ada video beserta nama dan deskripsi dari video tersebut.</font></b>
        \n\n\n<b><font color='#0082c8'>|-> Tentang Aplikasi :</font></b> digunakan sebagai penjelasan tentang aplikasi BIlanjaSign App ini, tentang kegunaan aplikasi ini dan detail dari pembuatan aplikasi ini. Tentang aplikasi juga berisi mengenai alamat kontak dan social media yang bisa dihubungi untuk mendapatkan update di setiap upgrade versi aplikasi.\n<b><font color='#be5869'><i>Tahapan Alur Penggunaan = </i>klik aplikasi BIlanjaSign App -> klik kotak telusuri di bagian tentang aplikasi -> masuk ke halaman penjelasan, di dalam penjelasan tersebut memuat apa arti aplikasi BIlanja dan dibuat oleh siapa beserta kegunaannya.</font></b>
        \n\n\n<b><font color='#0082c8'>|-> Tentang Kami :</font></b> digunakan sebagai penjelasan tentang pembuat dari aplikasi BIlanjaSign App ini, daftar dari nama nama developer pembuat aplikasi ini.\n<b><font color='#be5869'><i>Tahapan Alur Penggunaan = </i>klik aplikasi BIlanjaSign App -> klik kotak telusuri di bagian tentang kami -> masuk ke halaman penjelasan, di dalam penjelasan tersebut memuat informasi dari developer yang membuat aplikasi BIlanjaSign ini seperti ada gambar developer beserta nama, nim, alamat email, serta pekerjaan dari developer tersebut.</font></b>
        \n\n\n<b><font color='#0082c8'>|-> Menu Help :</font></b> berisi sebagai tata cara penggunaan dari aplikasi BIlanjaSign ini, menu ini dibuat agar para pengguna aplikasi para disabilitas bisa paham mengenai cara penggunaan aplikasi ini dengan benar.\n<b><font color='#be5869'><i>Tahapan Alur Penggunaan = </i>klik aplikasi BIlanjaSign App -> lihat bagian pojok kanan atas -> akan ada icon tanda tanya yang artinya menu help -> klik icon help tersebut -> masuk ke halaman penjelasan menu help, halaman tersebut berisi tata cara penggunaan aplikasi BIlanjaSign ini.</font></b>
    </string>
    <string name="socmed_apk">\n\n<u>Temukan kami di : </u>
        \nEmail : BIlanjaSign.id@gmail.com
        \nInstagram : BIlanjaSign.id
        \nFacebook : BIlanjaSignApp
    </string>

    <string name="credit_apk_help">Buatan Mahasiswa/i dari Fakultas Ilmu Komputer - Teknik Informatika 2017 - Universitas Mercu Buana Jakarta</string>
</resources>
